<resources>
    <string name="app_name" translatable="false">SprintSpirit</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Password">Password</string>
    <string name="Log_in">Log in</string>
    <string name="sprint_spirit_user_email" translatable="false">sprint_spirit_user_email</string>
    <string name="sprint_spirit_user_data" translatable="false">sprint_spirit_user_data</string>
    <string name="sprint_spirit_user_username" translatable="false">sprint_spirit_user_username</string>
    <string name="sprint_spirit_location_refresh_rate" translatable="false">sprint_spirit_location_refresh_rate</string>
    <string name="sprint_spirit_is_administrator" translatable="false">sprint_spirit_is_administrator</string>
    <string name="sprint_spirit_is_freshly_installed" translatable="false">sprint_spirit_is_freshly_installed</string>
    <string name="sprint_spirit_is_running" translatable="false">sprint_spirit_is_running</string>
    <string name="sprint_spirit_route_path" translatable="false">sprint_spirit_route_path</string>
    <string name="Error">Error</string>
    <string name="Accept">Accept</string>
    <string name="Sign_in_error">An error ocurred while singing in</string>
    <string name="You_Dont_Have_An_Account">You dont have an account? Create one.</string>
    <string name="Sign_up">Sign up</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Do_You_Have_An_Account">Do you have an account? Log in.</string>
    <string name="Sign_up_error">An error ocurred while signing up</string>
    <string name="sprint_spirit_user_id" translatable="false">sprint_spirit_user_id</string>
    <string name="Home">Home</string>
    <string name="Run">Run</string>
    <string name="Profile">Profile</string>
    <string name="Distance">Distance</string>
    <string name="Time">Time</string>
    <string name="Pace">Pace</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Username">Username</string>
    <string name="Weight_low_limit">Weight must be less than </string>
    <string name="Weight_high_limit">"Weight must be greater than "</string>
    <string name="Height_high_limit">Height must be greater than </string>
    <string name="Height_low_limit">"Height must be less than "</string>
    <string name="Password_min_characters">Password has to be of at least 7 characters long.</string>
    <string name="Email_not_valid">Email is not valid.</string>
    <string name="Username_min_characters">Username has to be at least 5 characters long.</string>
    <string name="Failed_to_upload_picture">Failed to upload profile picture. Check your internet connection.</string>
    <string name="Internet_will_be_uploaded">You dont have internet connection. It will be uploaded when connection is restored.</string>
    <string name="Your_stats">Your stats</string>
    <string name="Order_by">Order by</string>
    <string-array name="place_filter_array">
        <item>Town</item>
        <item>City</item>
        <item>State</item>
    </string-array>
    <string-array name="order_filter_array">
        <item>New</item>
        <item>Distance</item>
        <item>Time</item>
    </string-array>
    <string-array name="stats_filter_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Annual</item>
    </string-array>
    <string-array name="location_rates_array">
        <item>Lowest</item>
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Highest</item>
    </string-array>
    <string name="You_dont_have_runs">You don\'t have runs yet.</string>
    <string name="message_hint">message...</string>
    <string name="Chats">Chats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="You_dont_have_chats">You dont have chats. Subscribe to one and start discussing!</string>
    <string name="Your_chats">Your chats</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Are_you_sure_delete_run">Are you sure you want to delete this run? All posts associated will also be deleted.</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Are_you_sure_delete_post">Are you sure you want to delete the post associated to this run?</string>
    <string name="Are_you_sure_stop_recording">Are you sure you want to stop recording the route?</string>
    <string name="Cannot_upload_run">Cannot save route</string>
    <string name="Run_min_distance">Mininum distance for a route is %1$d meters</string>
    <string name="Settings">Settings</string>
    <string name="Location_refresh_rate">Location refresh rate</string>
    <string name="Highest_refresh_warning">Setting this refresh rate will improve route accuracy, but will drain your device battery significantly faster.</string>
    <string name="Lowest_refresh_warning">Setting this refresh rate will improve battery duration during recording, but will make your routes too inaccurate.</string>
    <string name="Logout">Logout</string>
    <string name="Are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="I_have_read_the_terms">I have read and accept the Terms and Conditions.</string>
    <string name="Enter_account_email">Enter your account email</string>
    <string name="Send">Send</string>
</resources>