<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/chatsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Chats"
        android:icon="@drawable/ic_chat"
        />
    <item
        android:id="@+id/runActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Run"
        android:icon="@drawable/ic_map"/>
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/Profile"
        android:icon="@drawable/ic_check_list"/>
</menu>