<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="onSendEmail"
            type="android.view.View.OnClickListener" />
        <variable
            name="onCancel"
            type="android.view.View.OnClickListener" />
        <variable
            name="writeText"
            type="androidx.databinding.adapters.TextViewBindingAdapter.AfterTextChanged"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_account_email"
            android:textStyle="bold"
            android:textSize="@dimen/font_large"
            />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_account"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:afterTextChanged="@{writeText}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{onCancel}"
                android:text="Cancelar"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{onSendEmail}"
                android:enabled="false"
                android:text="@string/Send"
                />

        </LinearLayout>



    </LinearLayout>
</layout>