<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hours"
            type="String"
            />
        <variable
            name="minutes"
            type="String"
            />

        <variable
            name="distance"
            type="String" />

        <variable
            name="pace"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_big">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:alignContent="space_between"
            app:alignItems="center"
            app:flexWrap="wrap">

            <TextView
                android:id="@+id/tv_stats_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_stats"
                android:textSize="@dimen/font_big"
                app:layout_flexGrow="1"
                android:maxLines="1"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_order="1"
                android:layout_gravity="end"
                />
        </com.google.android.flexbox.FlexboxLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                >

                <TextView
                    android:id="@+id/tv_stats_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Time"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_stats_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Distance"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_stats_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pace"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_normal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_stats_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{hours + &quot;h &quot; + minutes + &quot;min&quot;}"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_stats_distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{distance + &quot;km&quot;}"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_stats_pace_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{pace + &quot;min/km&quot;}"
                    android:textSize="@dimen/font_normal" />
            </TableRow>

        </TableLayout>

    </LinearLayout>


</layout>