<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_x_bigger"
        android:layout_marginTop="@dimen/margin_huge"
        tools:context=".ui.main.SettingsFragment">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:textSize="@dimen/font_big"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin_godzilla">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Location_refresh_rate"
                    android:textSize="@dimen/font_normal"
                    />
                <Spinner
                    android:id="@+id/sp_location_refresh_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"/>
                <TextView
                    android:id="@+id/tv_location_refresh_rate_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_warning"
                    android:drawableTint="#FF6F00"
                    android:text="Warning! Be careful!"
                    android:textSize="@dimen/font_normal"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logout"
                    android:drawableStart="@drawable/ic_logout"
                    android:layout_gravity="bottom"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>